layout frontend gemaakt

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,9 +4,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
+	<title>VideoPlayer</title>
+{{!-- Place stylesheets here --}}
+	<link rel="stylesheet" type="text/css" href="../css/main.css" />
+	<link rel="stylesheet" type="text/css" href="../css/addVideos.css" />
+	<link rel="stylesheet" type="text/css" href="../css/videoPLayer.css" />
+{{!-- End of stylesheets --}}
 </head>
 <body>
 	{{{body}}}
 </body>
+{{!-- Place scripts here --}}
+
+{{!-- End of scripts --}}
 </html>
