added keys to gitignore

--- a/views/Partials/navBar.handlebars
+++ b/views/Partials/navBar.handlebars
@@ -2,10 +2,10 @@
 	<nav id="login">
 		<ul>
 			<li>
-				<a href="/auth/google">Login</a>
+				<a href="/auth/logout">Logout</a>
 			</li>
 			<li>
-				<a href="/auth/logout">Logout</a>
+				<h4>{{user.username}}</h4>
 			</li>
 		</ul>
 	</nav>
