--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/main.css" />
 	<link rel="stylesheet" type="text/css" href="../css/addVideos.css" />
 	<link rel="stylesheet" type="text/css" href="../css/videoPLayer.css" />
+	<link rel="stylesheet" type="text/css" href="../css/navBar.css" />
 {{!-- End of stylesheets --}}
 </head>
 <body>
