added socket connection + add and remove videos Database

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,7 @@
 body {
 	/* remove body scroll */
 	overflow: hidden;
-
+	max-height: 100vh;
 	padding: 0;
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
