--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,9 @@
 	console.log(token)
 
 </script>
+<script src="/socket.io/socket.io.js"></script>
 <script src="Javascript/transparency.min.js"></script>
+<script src="Javascript/socket.js"></script>
 <script src="Javascript/playVideos.js"></script>
 <script src="Javascript/searchVideos.js"></script>
 
