--- a/public/css/navBar.css
+++ b/public/css/navBar.css
@@ -18,7 +18,6 @@ h1 {
 #login {
 	display: flex;
 	flex-direction: row;
-
 }
 
 #login ul {
@@ -59,7 +58,11 @@ h1 {
 	height: 2rem;
 	border: 1px solid lightgray;
 	border-left: none;
+	background: url('.../images/search.png');
 	background: lightgray;
+	background-size: 50%, cover;
+    background-repeat: no-repeat;
+    background-position: center;
 	border-radius: 0;
 	cursor: pointer;
 }
